# rust-httpd

./: .gitignore  Cargo.toml  README.md
src/: http.rs  main.rs
static/: test.txt
status_pages/: 404.html  500.html
